# codexbox

./: .gitignore  Cargo.toml  LICENSE  README.md  build-dmg.sh  package-lock.json
apps/codexbox-launcher/: Cargo.toml
apps/codexbox-launcher/src/: main.rs
apps/codexbox-manager/: index.html  package-lock.json  package.json
apps/codexbox-manager/src/: App.tsx  styles.css
apps/codexbox-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codexbox-manager/src-tauri/icons/: icon.icns
apps/codexbox-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/codexbox-manager/src-tauri/tests/: windows_subsystem.rs
apps/codexbox-manager/src/components/routing/: RoutingPage.tsx
assets/: routing-example.toml
assets/inject/: renderer-inject.js
crates/codexbox-core/: Cargo.toml
crates/codexbox-core/src/: ads.rs  ccs_import.rs  cli_wrapper.rs  launcher.rs  lib.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  script_market.rs  settings.rs  update.rs  version.rs  watcher.rs
crates/codexbox-core/src/install/: macos.rs  mod.rs  windows.rs
crates/codexbox-core/src/router/: config.rs  engine.rs  health.rs  metrics.rs  mod.rs  policy.rs
crates/codexbox-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  cli_wrapper.rs  installers.rs  launcher.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  updater.rs  upstream_worktree.rs  watcher.rs  zed_remote.rs
crates/codexbox-data/: Cargo.toml
crates/codexbox-data/src/: markdown.rs  provider_sync.rs  storage.rs
crates/codexbox-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
