[package]
name = "codexbox-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codexbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codexbox-core = { path = "../../crates/codexbox-core" }
codexbox-data = { path = "../../crates/codexbox-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
